# Evo-code

./: .env.example  .gitignore  .replit  BINANCE_SETUP.md  README.md  TELEGRAM_SETUP.md  ai_model.py  app.py  auto_refresh.js  backtest.py  backtest_yearly.py  binance_60s_loop.py  binance_websocket.py  check_secrets.py  diagnose_telegram.py  futures_trading.py  indicators.py  install_telegram.py  main_production.py  market_state_engine.py  position_management.py  pyproject.toml  railway.json  replit.md  requirements.txt  requirements_production.txt  requirements_railway.txt  run_telegram_bot.py  start_telegram_bot.py  telegram_bot.py  telegram_bot_fixed.py  telegram_bot_simple.py  test_binance_setup.py  test_bot_simple.py  test_config.py  test_connection.py  test_exchanges_brazil.py  test_telegram_bot.py  test_telegram_complete.py  test_telegram_integration.py  (+8 more)
.streamlit/: config.toml
attached_assets/: Pasted-import-ccxt-from-ccxt-import-TelegramBot-from-node-telegram-bot-api-CONFIGURA-ES--1758130411902_1758130411903.txt
config/: __init__.py  app_config.py  config.py  exchange_config.py  production_config.py  telegram_bot_config.py  telegram_config.py  timeframe_5m_config.py
data/: trading_bot.db
database/: database.py  models.py
docker/: Dockerfile
ia/: SETUP_FIRST_AI_ROADMAP.md
monitoring/: prometheus_metrics.py
procfile/: Novo Documento de Texto.txt
services/: __init__.py  billing_service.py  binance_user_data_stream.py  indicator_service.py  market_data_service.py  paper_trade_service.py  rate_limiter.py  risk_management_service.py  signal_analysis_service.py  stats_service.py  telegram_service.py
tests/: test_adaptive_governance.py  test_app_admin_panel.py  test_backtest.py  test_binance_user_data_stream.py  test_dashboard_user_access.py  test_futures_trading.py  test_indicator_quality.py  test_market_state_engine.py  test_market_state_promotion.py  test_multiuser_runtime.py  test_paper_trade_service.py  test_pipeline_v2.py  test_position_management.py  test_risk_management_service.py  test_smoke.py  test_telegram_bot_logic.py  test_trading_bot_logic.py
trading_core/: __init__.py  constants.py  market_data.py  pipeline_engine.py  pipeline_v2.py  signal_engine.py
utils/: logger.py
(+1 files in other folders)
