[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "aioredis==1.3.1",
    "alembic>=1.16.5",
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "ccxt>=4.5.5",
    "celery>=5.5.3",
    "cryptography>=46.0.1",
    "fastapi>=0.116.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "prometheus-client>=0.22.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-telegram-bot==22.4",
    "redis>=6.4.0",
    "sentry-sdk>=2.38.0",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "stripe>=12.5.1",
    "ta-lib>=0.6.7",
    "uvicorn>=0.35.0",
]
