[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "aioredis>=2.0.1",
    "asyncpg>=0.30.0",
    "ccxt>=4.5.5",
    "celery>=5.5.3",
    "cryptography>=46.0.1",
    "fastapi>=0.116.2",
    "joblib>=1.5.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "prometheus-client>=0.22.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-telegram-bot==22.6",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sentry-sdk>=2.38.0",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "stripe>=12.5.1",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
testpaths = ["tests"]
norecursedirs = ["pytest-cache-files-*", "pytest_cache", ".pytest_cache"]
